# ChangeLog for app-cdr/qcdemu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> +qcdemu-0.1.ebuild:
  Initial ebuild.
