@@ -1,3 +1,3 @@
 DIST qcdemu-0.1.tar.gz 27245 RMD160 9b6bcfcc16531301bb566c0ac671c303d3c1c7ce SHA1 5f7e9ed528430c76317b7a3a6dac6c55809954a5 SHA256 17194cfe13e9336593b44284adb9d44102d584c4cd8d87b1fcde165b4387c437
-EBUILD qcdemu-0.1.ebuild 700 RMD160 1cc1bdbb17741685a9f9c09742144a1049eaa776 SHA1 b750972f5130a5c41d71ce7fc8c1ca44790ac655 SHA256 67d3f617ab4cb53ad9233b7aaf6491793aa30d158b9ef165212ba3ed13e8ea7c
-MISC ChangeLog 203 RMD160 0212c1316bbf660e3a41c30db272d00f2573e338 SHA1 255045631bd9da5456744d7d8911a670ae535a4a SHA256 e81cf1ba7bb87e9fa89828ec4a5499ddb5dbb3cb55d9229e854395850b9f4b45
+EBUILD qcdemu-0.1-r1.ebuild 889 RMD160 1525ee9fac660073fd7bdc2e8b110e9f80897da2 SHA1 550d96bbd6ee5f83e3c40bc60d1f01ff9922b608 SHA256 1e1cd32fb6fa40ef4fd9e25ca1e90fb3bd0dacfd48b827a2d91d5d5494528550
+MISC ChangeLog 321 RMD160 e0ac87ae1fa4e3d72ee03f1142a8248069597eec SHA1 d11645700f8dd85f77f7b1ceb2722bdde5116bf5 SHA256 9f7510ebb431eb3267a59aa9dbd4e40717780c42d64ea756c0af6d8c1a2528d0
