@@ -13,17 +13,23 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-DEPEND="$(qt4_min_version 4.3)"
+DEPEND="|| ( ( $(qt4_min_version 4.3) )
+	x11-libs/qt-gui:4 )"
 RDEPEND="${DEPEND}
 	>=app-cdr/cdemu-1.0.0"
 
 S="${WORKDIR}/${PN}"
 
 pkg_setup() {
-	if ! built_with_use 'x11-libs/qt:4' dbus
-	then
-	    die "Qt must be built with USE=dbus"
+	if has_version ">=x11-libs/qt-4.3:4"; then
+		QT4_BUILT_WITH_USE_CHECK="dbus"
+	else
+		if ! built_with_use "x11-libs/qt-gui:4" dbus; then
+			eerror "You have to built x11-libs/qt-gui:4 with dbus."
+			die "dbus in qt-gui disabled"
+		fi
 	fi
+	qt4_pkg_setup
 }
 
 src_compile() {
