@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> -qcdemu-0.1.ebuild,
+  +qcdemu-0.1-r1.ebuild:
+  Fixed split Qt deps.
+
   02 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> +qcdemu-0.1.ebuild:
   Initial ebuild.
 
